redirect stderr of buck query to parent's stderr
Summary: We were previously quite opaque on why a query failed - add some more logs to hopefully clarify.

Reviewed By: shannonzhu

Differential Revision: D18728292

fbshipit-source-id: a003a8b366d4af66d3f7910fe10579eb45a070dd